--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "git@github.com:AkyunaAkish/twitter-email-gathering.git",
   "author": "AkyunaAkish <akyunaakish@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "twitter": "^1.7.1"
+  },
+  "scripts": {
+    "start": "node ./index.js"
+  }
 }
